syntax = "proto3";

package user;

import "google/protobuf/wrappers.proto";

message FindByIdUserRequest { int32 id = 1; }

message UserResponse {
  int32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UserResponseWithPassword {
  int32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string password = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UserResponseDeleteAt {
  int32 id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
  google.protobuf.StringValue deleted_at = 7;
}

message ApiResponseUser {
  string status = 1;
  string message = 2;
  UserResponse data = 3;
}

message ApiResponseUserWithPassword {
  string status = 1;
  string message = 2;
  UserResponseWithPassword data = 3;
}

message ApiResponseUserDeleteAt {
  string status = 1;
  string message = 2;
  UserResponseDeleteAt data = 3;
}
